# hospital-management-system

backend/: app_config.py  config.py  pyproject.toml  wsgi.py
backend/application/: __init__.py  api.py  forms.py  posts.py  routes.py
backend/server/: app_config.py
