[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = ["Nathaniel Senje <krystlsoftwares@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-WTF = "^0.14.3"
autopep8 = "^1.5.4"
pymongo = "^3.11.0"
uuid = "^1.30"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
